--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,22 @@ services:
     container_name: ingress
     network_mode: "host"
 
-  client1:
+  client:
     build: ./client/
-    container_name: client1
     network_mode: "host"
     depends_on:
       - ingress
-      - worker1
 
-  worker1:
+    deploy:
+      mode: replicated
+      replicas: 3
+
+  worker:
     build: ./worker/
-    container_name: worker1
     network_mode: "host"
     depends_on:
       - ingress
+
+    deploy:
+      mode: replicated
+      replicas: 3
