Make clients select file to be requested randomly so that clients do not always request the same file.

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -2,7 +2,8 @@ FROM python:latest
 
 ADD worker.py /worker/
 ADD test.txt /worker/
-ADD longggg.txt /worker/
+ADD long_test.txt /worker/
+ADD longer_than_buffer_test.txt /worker/
 
 WORKDIR /worker/
 
