Added writing output and ability to deal with small images. If you try to send a large image, it fails, as several of the sections get lost, as UDP is an inherently untrustworthy system. Will look into flow control and ACKs to allow the sending of larger files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
   client:
     build: ./client/
     network_mode: "host"
+    volumes:
+      - ./output:/output
     depends_on:
       - ingress
       - worker
