Figured out importing and reorganised!

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,10 +1,8 @@
 FROM python:latest
 
-ADD worker.py /worker/
-ADD test.txt /worker/
-ADD long_test.txt /worker/
-ADD longer_than_buffer_test.txt /worker/
-ADD test_image.png /worker/
+ADD worker/worker.py /worker/
+ADD worker/test_files/ /worker/
+COPY protocol_lib.py /worker/
 
 WORKDIR /worker/
 
