--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: '3.7'
 services:
   ingress:
-    build: ./ingress/
+    build:
+      dockerfile:
+        ingress/Dockerfile
     container_name: ingress
     network_mode: "host"
 
   client:
-    build: ./client/
+    build:
+      dockerfile:
+        client/Dockerfile
     network_mode: "host"
     volumes:
       - ./output:/output
@@ -19,7 +23,9 @@ services:
       replicas: 2
 
   worker:
-    build: ./worker/
+    build:
+      dockerfile:
+        worker/Dockerfile
     network_mode: "host"
     depends_on:
       - ingress
